Test Sandbox Project/src/objects/UserServicePresence.object
<CustomObject>
    <fields>
        <fullName>Agent_Attendance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent Attendance</label>
        <referenceTo>Agent_Attendance__c</referenceTo>
        <relationshipLabel>User Presences</relationshipLabel>
        <relationshipName>User_Presences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StatusDurationHours__c</fullName>
        <formula>ROUND( StatusDuration / 60 / 60,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>StatusDurationHours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StatusDurationMinutes__c</fullName>
        <formula>ROUND( StatusDuration /60 ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>StatusDurationMinutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>